Tests/CompilerTests/negative/unsatable-singleton.hylo
fun check<T>(_ x: T) {}

fun g(x: sink Void) {
  let y: #exactly(x)
}
